--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "clean:reports": "rimraf test-results && mkdirp test-results",
+    "generate:reports": "npx ts-node ./src/helper/reportGenerate.ts",
+    "pretest": "npm run clean:reports",
+    "posttest": "npm run generate:reports",
+    "execute:script": "cucumber-js test",
+    "test": "npm run execute:script || npm run posttest"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^11.0.1",
     "@playwright/test": "^1.47.1",
-    "@types/node": "^22.5.5"
+    "@types/node": "^22.5.5",
+    "mkdirp": "^3.0.1",
+    "multiple-cucumber-html-reporter": "^3.8.0",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2"
   }
 }
